Fixed issue with iPhone X layout, when social icons were covered by safari menu V1.0.3

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -639,7 +639,7 @@ section
 {
 	position: absolute;
 	left: 0;
-	bottom: 50px;
+	bottom: 100px;
 	width: 100%;
 }
 .menu_submit
